# bd_materials

./: .gitignore  CLAUDE.md  Makefile  README.md  example.py  main.py  pyproject.toml
bd_materials/: __init__.py  applicability.py  base.py  core.py  finished.py  finishes.py  glass.py  glass_ranges.py  metals.py  metals_ranges.py  paper.py  paper_ranges.py  pbr.py  plastics.py  plastics_ranges.py  ranges.py  registry.py  resins.py  resins_ranges.py  textile.py  textile_ranges.py  wood.py  wood_ranges.py
bd_materials/materials/: __init__.py  glass.py  metals.py  paper.py  plastics.py  resins.py  textile.py  wood.py
tests/: test_catalog.py  test_registry.py
