[build-system]
requires = ["setuptools>=81"]
build-backend = "setuptools.build_meta"

[project]
name = "bd_materials"
version = "0.2.0"
description = "Typical-values engineering materials for build123d -- with finishes and three.js PBR looks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
keywords = ["build123d", "cad", "materials", "finishes", "pbr", "three.js"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = ["threejs-materials>=1.2.1,<1.3.0"]

[project.optional-dependencies]
test = ["pytest==9.0.3"]

[project.urls]
Homepage = "https://github.com/bernhard-42/bd_materials"
Repository = "https://github.com/bernhard-42/bd_materials"
Issues = "https://github.com/bernhard-42/bd_materials/issues"

[tool.setuptools]
packages = ["bd_materials"]

[tool.pytest.ini_options]
testpaths = ["tests"]
